# Code-Plagiarism-Detector

./: .env.example  .gitignore  DEPLOYMENT.md  DEPLOY_READY.md  DEPLOY_SUMMARY.md  Dockerfile  FIXES_SUMMARY.md  GLITCH_CHECKLIST.md  GLITCH_DEPLOY.md  GLITCH_QUICKSTART.md  GLITCH_READY.md  LICENSE  PROJECT_COMPLETE.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  RENAME_SUMMARY.md  REPLIT_CHECKLIST.md  REPLIT_DEPLOY.md  REPLIT_QUICKSTART.md  SETUP.md  check_models.py  debug_together.py  demo.py  final_test.py  glitch.json  main.py  main_fixed.py  minimal_test.py  package.json  pyproject.toml  replit_config.txt  replit_setup.sh  requirements.txt  server.js  setup-local.bat  setup-local.sh  setup.bat  setup.sh  start-glitch.sh  (+8 more)
frontend/: .env.example  next.config.js  package-lock.json  package.json  tailwind.config.js  vercel.json
frontend/components/: CodeAnalysisPage.js  CodeEditor.js  ResultsPanel.js  ThemeToggle.js
frontend/pages/: _app.js  analysis.js  comparison.js  index.js
frontend/public/: index.html
frontend/styles/: globals.css
