[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-code-plagiarism-detector"
version = "1.0.0"
description = "AI-powered code plagiarism detection tool"
dependencies = [
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "cohere>=4.30.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0"
]

[tool.setuptools]
py-modules = ["main"]
